# auth0wrap

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: general.yml
src/: auth0_client.rs  lib.rs  social.rs  users.rs
src/tests/: social.rs  users.rs
