[package]
name = "auth0wrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = {version = "0.10.12", features = ["toml", "json", "env"], default-features = false}
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.193"
