[package]
name = "auth0wrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = {version = "0.10.12", features = ["toml", "json", "env"], default-features = false}
mockito = "1.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = "1.34.0"
url = "2.5.0"
