[package]
name = "auth0wrap"
version = "0.1.1"
description = "A wrapper for the Auth0 Authentication API"
categories = ["authentication", "auth0", "OAuth2"]
edition = "2021"
license = "MIT"
authors = ["James Binford <james@vozalta.io>"]
repository = "https://github.com/jamesbinford/auth0wrap"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = 3    # Maximum optimisation (this is the cargo default)
lto = "thin"     # Enable link-time optimisation (fast)

[dependencies]
figment = {version = "0.10.12", features = ["toml", "json", "env"], default-features = false}
mockito = "1.2.0"
reqwest = { version = "0.11", features = ["json"] }
rubedo = "0.4.0"
rubedo-macros = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = "1.34.0"
url = "2.5.0"
